<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />

    <item
        android:id="@+id/historyFragment"
        android:icon="@drawable/ic_history"
        android:title="@string/nav_history" />

    <item
        android:id="@+id/mainFragment"
        android:icon="@drawable/ic_scan"
        android:title="@string/nav_main" />

    <item
        android:id="@+id/myNetworkFragment"
        android:icon="@drawable/ic_wifi"
        android:title="@string/nav_my_network" />

    <item
        android:id="@+id/aboutMeFragment"
        android:icon="@drawable/ic_device"
        android:title="@string/nav_about_me" />

</menu>
